Remove other sites

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import { Globe } from "lucide-react";
         <div class="col-span-2 flex flex-1 flex-col">
           <h1 class="mb-6 text-4xl leading-tight">
             <strong>Up to date</strong><br />
-            <span class="font-light">Online Slide Maker Compilation</span>
+            <span class="font-light">No Mouse UIs</span>
           </h1>
           <Search client:load className="w-full" />
         </div>
