Update title and description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,10 +2,10 @@
 import { cn } from "@/lib/utils";
 
 const title =
-  "Placeholder title of your website";
+  "No-mouse computer users";
 const description =
-  "Placeholder description of your website";
-const url = "https://placeholder.com";
+  "For people who, for whatever reason, don't use a mouse.";
+const url = "https://nomouse.net";
 const image = "/public/preview.webp";
 ---
 
@@ -39,8 +39,8 @@ const image = "/public/preview.webp";
         "@context": "http://schema.org",
         "@type": "WebSite",
         "url": "https://placeholder.com",
-        "name":   "Placeholder title of your website",
-        "description": "Placeholder title of your website"
+        // "name":   "Placeholder title of your website",
+        // "description": "Placeholder title of your website"
       }
     </script>
 
