--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ const image = "/public/preview.webp";
       {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "https://placeholder.com",
+        "url": "https://nomouse.net",
         // "name":   "Placeholder title of your website",
         // "description": "Placeholder title of your website"
       }
