--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import ListTags from "@/components/ListTags";
 import "@/styles/globals.css";
 import { cn } from "@/lib/utils";
 import { Globe } from "lucide-react";
+import Giscus from "@/components/Giscus.astro";
 ---
 
 <Layout>
@@ -43,6 +44,10 @@ import { Globe } from "lucide-react";
     <section class={cn("flex-1 bg-muted pb-4 md:pb-12")}>
       <ListWebsites client:load />
     </section>
+    <section class={cn("flex-1 bg-muted pb-4 md:pb-12")}>
+      <Giscus client:load />
+    </section>
+
     <footer class="pb-32 pt-4 md:pb-8 md:pt-8">
       <div class="container mx-auto px-4 text-sm md:px-0">
         <div
