--- a/src/components/Giscus.astro
+++ b/src/components/Giscus.astro
@@ -2,21 +2,34 @@
 // Giscus component for Astro
 ---
 
-<script
-  src="https://giscus.app/client.js"
-  data-repo="bizkite-co/nomouse"
-  data-repo-id="R_kgDON2mW8g"
-  data-category="Announcements"
-  data-category-id="DIC_kwDON2mW8s4Cmyuu"
-  data-mapping="pathname"
-  data-strict="0"
-  data-reactions-enabled="1"
-  data-emit-metadata="0"
-  data-input-position="bottom"
-  data-theme="preferred_color_scheme"
-  data-lang="en"
-  crossorigin="anonymous"
-  async></script>
+<div id="giscus-container"></div>
+
+<script is:inline>
+  const giscusAttributes = {
+    src: "https://giscus.app/client.js",
+    "data-repo": "bizkite-co/nomouse",
+    "data-repo-id": "R_kgDON2mW8g",
+    "data-category": "Announcements",
+    "data-category-id": "DIC_kwDON2mW8s4Cmyuu",
+    "data-mapping": "pathname",
+    "data-strict": "0",
+    "data-reactions-enabled": "1",
+    "data-emit-metadata": "0",
+    "data-input-position": "bottom",
+    "data-theme": "preferred_color_scheme",
+    "data-lang": "en",
+    crossorigin: "anonymous",
+    async: true, // Use true instead of 'async'
+  };
+
+  const giscusScript = document.createElement('script');
+
+  Object.entries(giscusAttributes).forEach(([key, value]) => {
+    giscusScript.setAttribute(key, value.toString());
+  });
+
+  document.getElementById('giscus-container')?.appendChild(giscusScript);
+</script>
 
 <style>
   /* Add any custom styles here if needed */
