--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -71,6 +71,24 @@ const image = "/public/preview.webp";
         });
       }
     </script>
+
+    <script
+      is:inline
+      src="https://giscus.app/client.js"
+      data-repo="bizkite-co/nomouse"
+      data-repo-id="R_kgDON2mW8g"
+      data-category="Announcements"
+      data-category-id="DIC_kwDON2mW8s4Cmyuu"
+      data-mapping="pathname"
+      data-strict="0"
+      data-reactions-enabled="1"
+      data-emit-metadata="0"
+      data-input-position="bottom"
+      data-theme="preferred_color_scheme"
+      data-lang="en"
+      crossorigin="anonymous"
+      async
+    ></script>
   </head>
   <body class={cn("bg-background font-sans text-primary")}>
     <slot />
