feat: Add Google Tag Manager

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -89,8 +89,21 @@ const image = "/public/preview.webp";
       crossorigin="anonymous"
       async
     ></script>
+    <!-- Google Tag Manager -->
+    <!-- eslint-disable -->
+    <script>(function(w,d,s,l,i){(w as any)[l as string]=(w as any)[l as string]||[];(w as any)[l as string].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s) as HTMLScriptElement,dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode!.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5CR4Z74H');</script>
+    <!-- eslint-enable -->
+    <!-- End Google Tag Manager -->
   </head>
   <body class={cn("bg-background font-sans text-primary")}>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CR4Z74H"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <slot />
   </body>
 </html>
