--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,8 @@
 ---
 import { cn } from "@/lib/utils";
 
-const title =
-  "No-mouse computer users";
-const description =
-  "For people who, for whatever reason, don't use a mouse.";
+const title = "No-mouse computer users";
+const description = "For people who, for whatever reason, don't use a mouse.";
 const url = "https://nomouse.net";
 const image = "/public/preview.webp";
 ---
@@ -38,7 +36,7 @@ const image = "/public/preview.webp";
       {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "https://nomouse.net",
+        "url": "https://nomouse.net"
         // "name":   "Placeholder title of your website",
         // "description": "Placeholder title of your website"
       }
@@ -87,22 +85,52 @@ const image = "/public/preview.webp";
       data-theme="preferred_color_scheme"
       data-lang="en"
       crossorigin="anonymous"
-      async
-    ></script>
+      async></script>
     <!-- Google Tag Manager -->
     <!-- eslint-disable -->
-    <script>(function(w,d,s,l,i){(w as any)[l as string]=(w as any)[l as string]||[];(w as any)[l as string].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s) as HTMLScriptElement,dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode!.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-5CR4Z74H');</script>
+    <script>
+      (function (w, d, s, l, i) {
+        (w as any)[l as string] = (w as any)[l as string] || [];
+        (w as any)[l as string].push({
+          "gtm.start": new Date().getTime(),
+          event: "gtm.js",
+        });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s) as HTMLScriptElement,
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode!.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-5CR4Z74H");
+    </script>
     <!-- eslint-enable -->
     <!-- End Google Tag Manager -->
+     <!-- MS Clarity Tag -->
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "q7tx4vaplf");
+    </script>
+    <!-- End MS Clarity Tag -->
   </head>
   <body class={cn("bg-background font-sans text-primary")}>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CR4Z74H"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-5CR4Z74H"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"></iframe></noscript
+    >
     <!-- End Google Tag Manager (noscript) -->
     <slot />
   </body>
