Scrap keywords and add ahrefs

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -105,7 +105,7 @@ const image = "/public/preview.webp";
     </script>
     <!-- eslint-enable -->
     <!-- End Google Tag Manager -->
-     <!-- MS Clarity Tag -->
+    <!-- MS Clarity Tag -->
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] =
@@ -121,6 +121,10 @@ const image = "/public/preview.webp";
       })(window, document, "clarity", "script", "q7tx4vaplf");
     </script>
     <!-- End MS Clarity Tag -->
+    <script
+      src="https://analytics.ahrefs.com/analytics.js"
+      data-key="KiQ8xQe1tq/tw+8xR9rgxQ"
+      async></script>
   </head>
   <body class={cn("bg-background font-sans text-primary")}>
     <!-- Google Tag Manager (noscript) -->
