--- a/src/components/WebsiteItem.astro
+++ b/src/components/WebsiteItem.astro
@@ -11,6 +11,7 @@ interface Props {
       desktopSnapshot?: string;
       lastReviewAt: string | Date;
     };
+    slug: string;
   };
 }
 
@@ -20,8 +21,7 @@ import {cn} from "@/lib/utils"
 ---
 
 <a
-  href={website.data.url}
-  target="_blank"
+  href={`/source/${website.slug}`}
   class={cn(
     'rounded bg-background p-4 shadow',
     'flex flex-col gap-4',
