Fix: Move generateFilename, generateUrlPath, and normalizeUrl to utils
This commit moves the , , and  functions to  and updates the imports in , , and . This fixes a build error caused by  not being available during the Astro build process.

--- a/src/pages/websites/[filename].astro
+++ b/src/pages/websites/[filename].astro
@@ -1,15 +1,10 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import dataWebsites from '../../data/websites.json';
-import { normalizeUrl } from '../../enrich.js';
+import { normalizeUrl, generateFilename } from '../../lib/utils'; // Import from utils
 
 interface Props {
     website: typeof dataWebsites[0];
-}
-
-function generateFilename(url: string) {
-  const normalized = normalizeUrl(url);
-  return normalized.replace(/[^a-z0-9]/gi, '_') + '.png';
 }
 
 export async function getStaticPaths() {
