Fix: Add .js extension to imports
This commit adds the .js extension to the import statements in , , and . This fixes an  error that occurred during the build process because Node.js requires the file extension when importing local modules.

--- a/src/pages/websites/[filename].astro
+++ b/src/pages/websites/[filename].astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import dataWebsites from '../../data/websites.json';
-import { normalizeUrl, generateFilename } from '../../lib/utils'; // Import from utils
+import { normalizeUrl, generateFilename } from '../../lib/utils.js'; // Import from utils with .js extension
 
 interface Props {
     website: typeof dataWebsites[0];
