--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { cn } from "@/lib/utils";
+import { cn } from "../lib/utils.ts";
 
 const title = "No-mouse computer users";
 const description = "For people who, for whatever reason, don't use a mouse.";
