--- a/src/pages/websites/[filename].astro
+++ b/src/pages/websites/[filename].astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import dataWebsites from '../../data/websites.json';
-import { normalizeUrl, generateFilename } from '../../lib/utils.js'; // Import from utils with .js extension
+import { normalizeUrl, generateFilename } from '../../lib/utils.ts'; // Import from utils with .ts extension
 
 interface Props {
     website: typeof dataWebsites[0];
