--- a/src/components/Giscus.astro
+++ b/src/components/Giscus.astro
@@ -4,7 +4,7 @@
 
 <script
   src="https://giscus.app/client.js"
-  data-repo="bizkite-co/nomouse"
+  data-repo="bizkite-co/textnav"
   data-repo-id="R_kgDON2mW8g"
   data-category="Announcements"
   data-category-id="DIC_kwDON2mW8s4Cmyuu"
