--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import { cn } from "../lib/utils.ts";
 
 const title = "No-mouse computer users";
 const description = "For people who, for whatever reason, don't use a mouse.";
-const url = "https://nomouse.net";
+const url = "https://textnav.org";
 const image = "/public/preview.webp";
 ---
 
@@ -36,7 +36,7 @@ const image = "/public/preview.webp";
       {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "https://nomouse.net"
+        "url": "https://textnav.org"
         // "name":   "Placeholder title of your website",
         // "description": "Placeholder title of your website"
       }
@@ -73,7 +73,7 @@ const image = "/public/preview.webp";
     <script
       is:inline
       src="https://giscus.app/client.js"
-      data-repo="bizkite-co/nomouse"
+      data-repo="bizkite-co/textnav"
       data-repo-id="R_kgDON2mW8g"
       data-category="Announcements"
       data-category-id="DIC_kwDON2mW8s4Cmyuu"
