--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const websiteData = websites.map(website => {
 });
 ---
 
-<Layout title="No Mouse">
+<Layout title="Text Nav">
   <main class="flex min-h-screen flex-col">
     <Navbar />
     <section
@@ -36,7 +36,7 @@ const websiteData = websites.map(website => {
         <div class="col-span-2 flex flex-1 flex-col">
           <h1 class="mb-6 text-4xl leading-tight">
             <strong>Up to date</strong><br />
-            <span class="font-light">No Mouse UIs</span>
+            <span class="font-light">Text Nav UIs</span>
           </h1>
           <Search client:load className="w-full" />
         </div>
@@ -98,7 +98,7 @@ const websiteData = websites.map(website => {
                 </svg>
               </Button>
             </a>
-            <a href="https://x.com/nomouse" target="_blank">
+            <a href="https://x.com/textnav" target="_blank">
               <Button variant="ghost" size="icon">
                 <svg
                   role="img"
@@ -113,7 +113,7 @@ const websiteData = websites.map(website => {
                 </svg>
               </Button>
             </a>
-            <a href="https://buymeacoffee.com/nomouse" target="_blank">
+            <a href="https://buymeacoffee.com/textnav" target="_blank">
               <Button variant="ghost" size="icon">
                 <svg
                   role="img"
