--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,12 @@
 ---
 import { cn } from "../lib/utils.ts";
+import GoogleTag from "@/components/GoogleTag.astro";
 
-const title = "No-mouse computer users";
+interface Props {
+	title: string;
+}
+
+const { title } = Astro.props;
 const description = "For people who, for whatever reason, don't use a mouse.";
 const url = "https://textnav.org";
 const image = "/public/preview.webp";
